<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>world.bentobox</groupId>
    <artifactId>controlpanel</artifactId>
    <version>${revision}</version>

    <name>ControlPanel</name>
    <description>This is simple ControlPanel for all BentoBox GameMode addons.</description>
    <url>https://github.com/BentoBoxWorld/ControlPanel</url>

    <inceptionYear>2019</inceptionYear>

    <!-- SCM is a GitHub link to your project -->
    <!-- Can be removed -->
    <scm>
        <connection>scm:git:https://github.com/BentoBoxWorld/ControlPanel.git</connection>
        <developerConnection>scm:git:git@github.com:BentoBoxWorld/ControlPanel.git</developerConnection>
        <url>https://github.com/BentoBoxWorld/ControlPanel</url>
    </scm>

    <!-- ciManagement is a build server that runs builds for your project -->
    <!-- Can be removed -->
    <ciManagement>
        <system>jenkins</system>
        <url>http://ci.codemc.org/job/BentoBoxWorld/job/ControlPanel</url>
    </ciManagement>

    <!-- issueManagement is a link to issues page. -->
    <!-- Can be removed -->
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/BentoBoxWorld/ControlPanel/issues</url>
    </issueManagement>

    <!-- distributionManagement contains public maven repositories for your 
        addon -->
    <!-- Can be removed -->
    <distributionManagement>
        <repository>
            <id>bentoboxworld</id>
            <url>https://repo.codemc.org/repository/bentoboxworld/</url>
        </repository>
    </distributionManagement>

    <!-- Properties contains all variables that can offten change, f.e. BentoBox 
        API version -->
    <properties>
        <!-- Some JAVA encoding settings -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>

        <!-- SPIGOT API version -->
        <spigot.version>1.21.3-R0.1-SNAPSHOT</spigot.version>

        <!-- BentoBox API version -->
        <bentobox.version>2.7.1-SNAPSHOT</bentobox.version>

        <!-- Revision variable removes warning about dynamic version -->
        <revision>${build.version}-SNAPSHOT</revision>
        <!-- This allows to change between versions and snapshots. -->
        <build.version>1.14.0</build.version>
        <build.number>-LOCAL</build.number>
        <!-- Sonar Cloud -->
        <sonar.projectKey>BentoBoxWorld_ControlPanel</sonar.projectKey>
        <sonar.organization>bentobox-world</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    </properties>

    <profiles>
        <profile>
            <id>ci</id>
            <activation>
                <property>
                    <name>env.BUILD_NUMBER</name>
                </property>
            </activation>
            <properties>
                <!-- Override only if necessary -->
                <build.number>-b${env.BUILD_NUMBER}</build.number>
                <!-- GIT_BRANCH -->
            </properties>
        </profile>
        <profile>
            <id>master</id>
            <activation>
                <property>
                    <name>env.GIT_BRANCH</name>
                    <value>origin/master</value>
                </property>
            </activation>
            <properties>
                <!-- Override only if necessary -->
                <revision>${build.version}</revision>
                <!-- Empties build number variable. -->
                <build.number></build.number>
            </properties>
        </profile>
    </profiles>

    <!-- Repositories contains links from were dependencies will be searched -->
    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>spigotmc-public</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>bentoboxworld</id>
            <url>https://repo.codemc.org/repository/bentoboxworld/</url>
        </repository>
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.org/repository/maven-public/</url>
        </repository>
        <repository>
            <id>vault-repo</id>
            <url>http://nexus.hc.to/content/repositories/pub_releases</url>
        </repository>
    </repositories>

    <!-- Your addon must contain Spigot and BentoBox APIs dependencies. -->
    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>${spigot.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>world.bentobox</groupId>
            <artifactId>bentobox</artifactId>
            <version>${bentobox.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>18.0.0</version>
        </dependency>
    </dependencies>

    <!-- Build contains information for maven. It allows to create correct 
        jar file. -->
    <build>
        <!-- By default ${revision} is ${build.version}-SNAPSHOT -->
        <!-- If GIT_BRANCH variable is set to origin/master, then it will 
            be only ${build.version}. -->

        <!-- By default ${build.number} is -LOCAL. -->
        <!-- If the BUILD_NUMBER variable is set, then it will be -b[number]. -->
        <!-- If GIT_BRANCH variable is set to origin/master, then it will 
            be the empty string. -->
        <finalName>${project.name}-${revision}${build.number}</finalName>

        <defaultGoal>clean package</defaultGoal>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/resources/locales</directory>
                <targetPath>./locales</targetPath>
                <filtering>false</filtering>
                <includes>
                    <include>*.yml</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources/blueprints</directory>
                <targetPath>./blueprints</targetPath>
                <filtering>false</filtering>
                <includes>
                    <include>*.blu</include>
                    <include>*.json</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>blu</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <!--suppress MavenModelInspection -->
                <configuration>
                    <argLine>
                        ${argLine}
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.math=ALL-UNNAMED
                        --add-opens java.base/java.io=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens
                        java.base/java.util.stream=ALL-UNNAMED
                        --add-opens java.base/java.text=ALL-UNNAMED
                        --add-opens
                        java.base/java.util.regex=ALL-UNNAMED
                        --add-opens
                        java.base/java.nio.channels.spi=ALL-UNNAMED
                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                        --add-opens java.base/java.net=ALL-UNNAMED
                        --add-opens
                        java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens java.base/sun.nio.fs=ALL-UNNAMED
                        --add-opens java.base/sun.nio.cs=ALL-UNNAMED
                        --add-opens java.base/java.nio.file=ALL-UNNAMED
                        --add-opens
                        java.base/java.nio.charset=ALL-UNNAMED
                        --add-opens
                        java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens
                        java.logging/java.util.logging=ALL-UNNAMED
                        --add-opens java.base/java.lang.ref=ALL-UNNAMED
                        --add-opens java.base/java.util.jar=ALL-UNNAMED
                        --add-opens java.base/java.util.zip=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <failOnError>false</failOnError>
                    <additionalJOption>-Xdoclint:none</additionalJOption>
                    <!-- To compile with Java 11, this tag may be required -->
                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>install</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.5.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.10</version>
                <configuration>
                    <append>true</append>
                    <excludes>
                        <!-- This is required to prevent Jacoco from adding 
                            synthetic fields to a JavaBean class (causes errors in testing) -->
                        <exclude>**/*Names*</exclude>
                        <!-- Prevents the Material is too large to mock error -->
                        <exclude>org/bukkit/Material*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <formats>
                                <format>XML</format>
                            </formats>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
